# qt_xbox_controller

./: .gitignore  CMakeLists.txt  README.md  gamepad_thread.cpp  gamepad_thread.h  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  record.cpp  record.h  videostream.cpp  videostream.h
qtest/: CMakeLists.txt  testqstring.cpp  testqstring.h
test_lib/: CMakeLists.txt  test.cpp  test.h
